<resources>
    <string name="app_name" translatable="false">BonApp</string>
    <string name="rechercheTitleID">Recherche</string>
    <string name="favorisTitleID">Ajouter aux favoris</string>
    <string name="parametreTitleID">Paramètres</string>
    <string name="userTitleID">Login</string>

    <string name="buttonRechRec">Recettes</string>
    <string name="buttonRechUser">Utilisateurs</string>

    <string name="textRechRec">Recherche de recettes</string>
    <string name="rechercheUser">Recherche d\'utilisateur</string>
    <string name="valider">Valider</string>
    <string name="listeVide">Aucune recette correspondante</string>
    <string name="rechercheIndications">Ingrédients souhaités, titre, ...</string>
    <string name="utilisateurs">Utilisateurs</string>
    <string name="recettes">Recettes</string>
    <string name="recette">Recette</string>
    <string name="account">Compte</string>
    <string name="requesterror">Erreur réseau</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_settings">Settings</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="chargementFav">Chargement des favoris</string>
    <string name="title_activity_register">S\'enregistrer</string>
    <string name="email">Email</string>
    <string name="login">Connexion</string>
    <string name="password">Mot de passe</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="register">S\'enregistrer</string>
    <string name="createaccount">Créer un compte</string>
    <string name="logout">Déconnexion</string>
    <string name="processing">Traitement en cours...</string>
    <string name="wait">Patience!</string>
    <string name="facebook_app_id" translatable="false">887394014679392</string>
    <string name="title_activity_login_activity_fb">BonApp - connexion</string>
<<<<<<< HEAD
=======
    <string name="action_settings">Settings</string>
>>>>>>> origin/master
    <string name="title_activity_favorite_recipe">Recette</string>
    <string name="suprfav">Retirer des favoris</string>
    <string name="recetteexiste">Recette déjà dans vos favoris !</string>
    <string name="erreurserveur">Erreur du serveur, réessayez plus tard !</string>
    <string name="problemesurvenu">Problème survenu... Réessayez plus tard !</string>
    <string name="favoris">Favoris</string>
    <string name="ajouterfav">Ajouter cette recette à vos favoris?</string>
    <string name="oui">Oui !</string>
    <string name="non">Non</string>
    <string name="supprimerfav">Retirer cette recette de vos favoris ?</string>
    <string name="recetteajoutee">Recette ajoutée à vos favoris !</string>
    <string name="recettesupprimee">Recette retirée de vos favoris !</string>
    <string name="chargement">Chargement...</string>
    <string name="chargementmsg">Vos recettes arrivent !</string>
<<<<<<< HEAD
    <string name="noconnection">Pas de connexion</string>
    <string name="retry">Réessayer</string>
    <string name="quitter">Quitter</string>
    <string name="firstconnection">Premiere connexion! Bienvenue,</string>
    <string name="welcomemsg">Bienvenue,</string>
    <string name="recettedejasuppr">Cette recette n\'est plus dans vos favoris</string>
=======
>>>>>>> origin/master
</resources>
