<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textRechRec"
        android:id="@+id/textRechRec"
        android:textSize="37dp"
        android:textAlignment="center" />

    <EditText android:id="@+id/editTextSearchRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/rechercheIndications"/>
    <!--<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSearchRecipe"
        android:inputType="text"
        android:hint="@string/rechercheIndications" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:id="@+id/buttonValiderRech"
        android:layout_gravity="right" />

</LinearLayout>