<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/rechercheTitleID"
        android:id="@+id/pageRecherche"
        android:layout_marginTop="38dp"
        android:textSize="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonRechRec"
        android:id="@+id/buttonRechRec"
        android:layout_marginTop="83dp"
        android:layout_below="@+id/pageRecherche"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonRechUser"
        android:id="@+id/buttonRechUser"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/buttonRechRec"
        android:layout_centerHorizontal="true" />
</RelativeLayout>